# subs

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  audit.py  dashboard.py  forecast.py  groups.py  integrations.py  me.py  recommendations.py  subscriptions.py
backend/app/core/: config.py  db.py  errors.py  responses.py  security.py  types.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: common.py  forecast.py  group.py  integration.py  recommendation.py  subscription.py
backend/app/services/: audit.py  billing_calculator.py  calendar_sync_service.py  forecast_service.py  group_service.py  occurrence_service.py  planner_client.py  serializers.py  subscription_service.py  variable_estimate_service.py
backend/tests/: conftest.py  test_api_auth.py  test_billing_calculator.py  test_group_forecast.py  test_recommendations_behavior.py  test_variable_payments.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/forecast/: page.tsx
frontend/app/groups/: page.tsx
frontend/app/history/: page.tsx
frontend/app/integrations/: page.tsx
frontend/app/recommendations/: page.tsx
frontend/app/subscriptions/: page.tsx
frontend/components/: SubsApp.tsx
frontend/lib/: api.ts  design-tokens.ts  money.ts  types.ts
