[project]
name = "nerior-subs"
version = "0.1.0"
description = "Nerior subscription manager service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
